# robot_garden

./: README.md
p3at_description/: CMakeLists.txt  package.xml
p3at_description/configs/: amcl_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  navigation.rviz  robot_params.yaml
p3at_description/launch/: amcl.launch  amcl_map_server.launch  amcl_move_base.launch  garden_world.launch  garden_world_mapping.launch  gmapping_launch.launch  move_base.launch  navigation_main.launch  provide_map.launch  rviz.launch  spawn_p3at.launch
p3at_description/maps/: garden.pgm  garden.yaml  garden2.pgm  garden2.yaml
p3at_description/scripts/: spawn_robot.py
p3at_description/urdf/: hokuyo_utm30lx.urdf.xacro  pioneer3at.urdf.xacro  pioneer3at_body.xacro  pioneer3at_whole.urdf.xacro
p3at_gazebo/models/garden_flower/: model.config  model.sdf
p3at_gazebo/models/garden_tree/: model.config  model.sdf
p3at_gazebo/worlds/: basic_garden.world  garden.world  garden2.world  jardin.world
p3at_gazebo/worlds/archive/: garden.world  garden_bugged.world
p3at_plugin/: CMakeLists.txt  package.xml
p3at_plugin/include/: get_flower_locations.h  waypoints.h
p3at_plugin/src/: actionlib_movebase.cc  get_flower_locations.cc  get_flower_locations.h  get_locations  p3at.cc  p3at_backup.cc  p3at_controller.cc  p3at_controller_movebase.cc  p3at_controller_skip.cc  p3at_path_planning.cc  parse_world_file  parse_world_file.cc  path_planning_movebase.cc  waypoint_following_custom.cc  waypoint_following_movebase.cc
