<?xml version="1.0"?>
<package>
  <name>p3at_description</name>
  <version>1.0.0</version>
  <description>
    Pioneer 3at description
  </description>

  <license>Apache 2.0</license>
  <maintainer email="nate@osrfoundation.org">Nate Koenig</maintainer>
  
  <author email="nate@osrfoundation.org">Nate Koenig</author>
  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
